tests/transpiler/x/swift/closure.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/008/main.swift:6:8: error: cannot call value of non-function type 'Any'
4 | }
5 | let add10 = makeAdder(10)
6 | print((add10(7) as! Int))
  |        `- error: cannot call value of non-function type 'Any'
7 | 
