tests/transpiler/x/swift/closure.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:17:40 GMT+7
func makeAdder(_ n: Int) -> Any {
    return { (x: Int) -> Int in (x + n) }
}
let add10 = makeAdder(10)
print((add10(7) as! Int))
